network-policies/base/IstioGateway-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-vote
  namespace: voting-dev
spec:
  podSelector:
    matchLabels:
      app: vote     # The target app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          gateway.networking.k8s.io/gateway-name: voting-gateway
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-result
  namespace: voting-dev
spec:
  podSelector:
    matchLabels:
      app: result  # The target app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          gateway.networking.k8s.io/gateway-name: resulting-gateway
    ports:
    - protocol: TCP
      port: 8081
