network-policies/base/default-deny.yaml

#  block all traffic by default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: voting-dev
spec:
  podSelector: {}
  policyTypes:
  - Ingress
